core-plugins/src/test/resources/scraper/plugins/core/typechecker/ok/log.yf
---
name: log
graphs:
  start:
    - type: EchoNode
      log: "Just a log message"
